deploy/22-deploy-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
    role: nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      name: web-app
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: bashayrapps/ideas-lab-app
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8082
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8082
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
