deploy/23-deploy-service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      nodePort: 30284
